Directives, Pipes, Forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,5 @@
     <button class="btn btn-primary" (click)="loginFunc()" >Login</button>
   </div>-->
  <app-new-comp></app-new-comp>
-
+ <app-forms></app-forms>
+<app-template-driven></app-template-driven>
